# MatterESP32Multicontroller

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.esphome  Makefile  docker-compose.yml  go.mod  go.sum
cmd/server/: main.go
data/: embed.go
data/boards/: esp32-c3.yaml  esp32-h2.yaml  esp32-s3.yaml
data/effects/: breathing-dual-effect.yaml  breathing-effect.yaml  firefly-effect.yaml  flame-dual-effect.yaml  flicker-dual-effect.yaml  strobe-dual-effect.yaml  twinkle-dual-effect.yaml
data/modules/: analog-in.yaml  bh1750.yaml  binary-input.yaml  bme280.yaml  dht22.yaml  drv8833-led-mono.yaml  drv8833-led.yaml  drv8833.yaml  gpio-switch.yaml  neopixel.yaml  wrgb-led.yaml
data/templates/: drv8833-bicolor-strip-c3.yaml  drv8833-mono-strip-c3.yaml
esphome-svc/: server.py
firmware/: BUILD.md  CMakeLists.txt  Dockerfile.base  Dockerfile.build  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.cpp  console_cmd.cpp  console_cmd.h  drv8833.cpp  drv8833.h  matter_app.cpp  matter_app.h  nvs_config.cpp  nvs_config.h
internal/api/: build.go  devices.go  devices_test.go  effects.go  effects_test.go  firmware.go  firmware_test.go  flash.go  flash_test.go  health.go  health_test.go  jobs.go  jobs_test.go  modules.go  modules_test.go  ota.go  router.go  server.go  settings.go  static.go  static_test.go  templates.go  templates_test.go  webflash.go  webflash_test.go
internal/config/: config.go  config_test.go  types.go
internal/db/: db.go  (+11 more)
web/: embed.go  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+79 files in other folders)
